# sciqnt

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STATE.md  connectors-index.json  llms.txt  pyproject.toml  run_tests.sh  sciqnt_cli.py
.github/: PRINCIPLE_REVIEW.md  PULL_REQUEST_TEMPLATE.md
core/: README.md
core/sq_agents/: FINDINGS.md  __init__.py  pyproject.toml
core/sq_aggregator/: __init__.py  core.py  pyproject.toml
core/sq_analytics/: __init__.py  performance.py  pyproject.toml  tax.py
core/sq_analytics/sciqnt_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/sq_compute/: FINDINGS.md  __init__.py  cash.py  fold.py  pyproject.toml
core/sq_compute/sciqnt_compute.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/sq_config/: __init__.py  pyproject.toml
core/sq_config/sciqnt_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/sq_fmt/: README.md  __init__.py  pyproject.toml
core/sq_fx/: pyproject.toml
core/sq_fx/sciqnt_fx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/sq_market_data/: __init__.py  pyproject.toml
core/sq_performance/: FINDINGS.md  __init__.py  core.py  pyproject.toml
core/sq_platform/: __init__.py  _cache.py  aggregated.py  home.py  insights.py  modules_cmd.py  pyproject.toml
core/sq_price_store/: __init__.py  pyproject.toml
core/sq_scaffold/: __init__.py  pyproject.toml
core/sq_schema/: CHANGELOG.md  __init__.py  pyproject.toml
core/sq_schema/sciqnt_schema.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/sq_secrets/: FINDINGS.md  __init__.py  pyproject.toml
core/sq_secrets/sciqnt_secrets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/sq_skills/: FINDINGS.md  __init__.py  pyproject.toml
core/sq_tui/: FINDINGS.md  __init__.py  pyproject.toml
core/sq_tui/sciqnt_tui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: README.md  analytics_demo.py  csv_to_canonical_demo.py  fold_position_demo.py  historical_pit.py  historical_with_marktomarket.py  portfolio_value.py  reconcile_check.py  tax_lots_demo.py
modules/sq-config/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  set.py  show.py
modules/sq-config/src/sq_config_ui/: __init__.py
modules/sq-degiro/: .env.example  FINDINGS.md  SKILL.md  doctor.py  fix_totp.py  forget_creds.py  manifest.yaml  probe.py  pyproject.toml  setup_creds.py  show_creds.py
modules/sq-degiro/src/sciqnt_degiro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modules/sq-degiro/src/sq_degiro/: __init__.py  canonical.py  history_sync.py  live.py  pnl.py
modules/sq-degiro/tests/: test_account_canonical.py  test_canonical.py  test_cash_ledger.py  test_cli_accounts.py  test_cost_basis_config.py  test_csv_canonical.py  test_csv_enrichment.py  test_history_dir_resolution.py  test_history_sync.py  test_load_history_cache.py  test_pnl.py  test_session_reuse.py
modules/sq-degiro/tests/fixtures/: account.csv  transactions.csv  transactions_foreign.csv
modules/sq-demo/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml
modules/sq-demo/src/sq_demo/: __init__.py  portfolio.py
modules/sq-demo/tests/: test_demo.py
modules/sq-edgar/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml
modules/sq-edgar/src/sq_edgar/: __init__.py  edgar.py
modules/sq-edgar/tests/: test_edgar.py
modules/sq-finnhub/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  setup_auth.py
modules/sq-finnhub/src/sq_finnhub/: __init__.py  news.py  provider.py
modules/sq-finnhub/tests/: test_provider.py
modules/sq-firds/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml
modules/sq-firds/src/sq_firds/: __init__.py  resolve.py
modules/sq-firds/tests/: test_resolve.py
modules/sq-fx-ecb/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  refresh.py  show.py
modules/sq-fx-ecb/src/sq_fx_ecb/: __init__.py  cache.py  parser.py  provider.py
modules/sq-fx-ecb/tests/: test_cache.py  test_parser.py  test_provider.py
modules/sq-fx-ecb/tests/fixtures/: ecb_daily.xml  ecb_hist90d.xml
modules/sq-kalshi/: .env.example  FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  setup_creds.py
modules/sq-kalshi/src/sq_kalshi/: __init__.py  canonical.py  live.py
modules/sq-kalshi/tests/: test_canonical.py
modules/sq-news-rss/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml
modules/sq-news-rss/src/sq_news_rss/: __init__.py  feed.py  provider.py
modules/sq-news-rss/tests/: test_provider.py
modules/sq-openfigi/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml
modules/sq-openfigi/src/sq_openfigi/: __init__.py  cli.py  resolve.py
modules/sq-openfigi/tests/: test_resolve.py
modules/sq-polymarket/: .env.example  FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  setup_creds.py
modules/sq-polymarket/src/sq_polymarket/: __init__.py  canonical.py  live.py  onchain.py
modules/sq-polymarket/tests/: test_canonical.py  test_onchain.py
modules/sq-robinhood/: .env.example  FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  setup_creds.py
modules/sq-robinhood/src/sq_robinhood/: __init__.py  canonical.py  live.py
modules/sq-robinhood/tests/: test_canonical.py
modules/sq-tiingo/: FINDINGS.md  SKILL.md  manifest.yaml  pyproject.toml  setup_auth.py
modules/sq-tiingo/src/sq_tiingo/: __init__.py  price.py  provider.py
modules/sq-tiingo/tests/: test_provider.py
research/: 01-mcp-skills-libraries.md  02-oss-fintech-landscape.md  03-canonical-schema.md  04-pit-bitemporal-iceberg.md  05-data-value-and-connectors.md  component-world-blueprint.md  composable-architecture.md  config-settings-cross-asset.md  connect-experience.md  connector-framework.md  connector-publishing.md  connectors-prediction-markets-and-robinhood.md  connectors-t212-ibkr.md  distribution-governance.md  distribution-implementation-prompt.md  llm-native-integration.md  milestone-0-canonical-schema.md  milestone-0-cross-asset-validation.md  mvp-connectors.md  release-framework.md  release-plan.md  synthesis.md  tui-experience.md
(+58 files in other folders)
