[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-agents"
version = "0.0.1"
description = "sq_agents — detect installed coding agents and launch the user's preferred"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-config",
]

[tool.setuptools]
packages = ["sq_agents"]

[tool.setuptools.package-dir]
sq_agents = "."

[tool.uv.sources]
    "sciqnt-config" = { workspace = true }
