[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-aggregator"
version = "0.0.1"
description = "sq-aggregator — merge multiple `PortfolioSnapshot`s into a multi-broker view"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-analytics",
    "sciqnt-fx",
    "sciqnt-schema",
]

[tool.setuptools]
packages = ["sq_aggregator"]

[tool.setuptools.package-dir]
sq_aggregator = "."

[tool.uv.sources]
    "sciqnt-analytics" = { workspace = true }
    "sciqnt-fx" = { workspace = true }
    "sciqnt-schema" = { workspace = true }
