[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-compute"
version = "0.0.1"
description = "sq-compute — pure compute over canonical entities"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
]

[tool.setuptools]
packages = ["sq_compute"]

[tool.setuptools.package-dir]
sq_compute = "."

[tool.uv.sources]
    "sciqnt-schema" = { workspace = true }
