[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-config"
version = "0.0.1"
description = "sq-config — user-level configuration substrate for sciqnt"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["sq_config"]

[tool.setuptools.package-dir]
sq_config = "."
