[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-fmt"
version = "0.0.1"
description = "sq-fmt — pure formatting substrate (number/table/chart/ANSI), zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["sq_fmt"]

[tool.setuptools.package-dir]
sq_fmt = "."
