[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-platform"
version = "0.0.1"
description = "sq-platform — thin dispatcher & TUI for sciqnt"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-agents",
    "sciqnt-aggregator",
    "sciqnt-analytics",
    "sciqnt-compute",
    "sciqnt-config",
    "sciqnt-fx",
    "sciqnt-market-data",
    "sciqnt-performance",
    "sciqnt-price-store",
    "sciqnt-schema",
    "sciqnt-skills",
    "sciqnt-tui",
]

[tool.setuptools]
packages = ["sq_platform"]

[tool.setuptools.package-dir]
sq_platform = "."

[tool.uv.sources]
    "sciqnt-agents" = { workspace = true }
    "sciqnt-aggregator" = { workspace = true }
    "sciqnt-analytics" = { workspace = true }
    "sciqnt-compute" = { workspace = true }
    "sciqnt-config" = { workspace = true }
    "sciqnt-fx" = { workspace = true }
    "sciqnt-market-data" = { workspace = true }
    "sciqnt-performance" = { workspace = true }
    "sciqnt-price-store" = { workspace = true }
    "sciqnt-schema" = { workspace = true }
    "sciqnt-skills" = { workspace = true }
    "sciqnt-tui" = { workspace = true }
