[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-scaffold"
version = "0.0.1"
description = "sq_scaffold — write a new connector bundle skeleton, then hand it to an agent"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
    "sciqnt-secrets",
]

[tool.setuptools]
packages = ["sq_scaffold"]

[tool.setuptools.package-dir]
sq_scaffold = "."

[tool.uv.sources]
    "sciqnt-schema" = { workspace = true }
    "sciqnt-secrets" = { workspace = true }
