[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-schema"
dynamic = ["version"]                # single source: sq_schema.__version__
description = "sq-schema — canonical cross-asset schema for sciqnt"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic",
]

[tool.setuptools]
packages = ["sq_schema"]

[tool.setuptools.dynamic]
version = { attr = "sq_schema.__version__" }

[tool.setuptools.package-dir]
sq_schema = "."

[tool.setuptools.package-data]
sq_schema = ["contract.schema.json"]   # ship the language-agnostic contract artifact
