[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-secrets"
version = "0.0.1"
description = "sq-secrets — shared credential substrate (NOT a connector)"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "keyring",
    "sciqnt-config",
    "sciqnt-fmt",
]

[project.optional-dependencies]
# Themed interactive credential prompts (questionary). Without this the prompt
# path degrades to stdlib getpass/numbered-menu — the headless keychain+env
# path needs none of it.
tui = ["sciqnt-tui"]

[tool.setuptools]
packages = ["sq_secrets"]

[tool.setuptools.package-dir]
sq_secrets = "."

[tool.uv.sources]
    "sciqnt-config" = { workspace = true }
    "sciqnt-fmt" = { workspace = true }
    "sciqnt-tui" = { workspace = true }
