[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-tui"
version = "0.0.1"
description = "sq-tui — interactive TUI substrate for sciqnt (builds on sq-fmt)"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-fmt",
    "prompt-toolkit",
    "questionary",
]

[tool.setuptools]
packages = ["sq_tui"]

[tool.setuptools.package-dir]
sq_tui = "."

[tool.uv.sources]
"sciqnt-fmt" = { workspace = true }
