[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-config-ui"
version = "0.0.1"
description = "sciqnt settings UI bundle"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-agents",
    "sciqnt-config",
    "sciqnt-platform",
    "sciqnt-tui",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-agents" = { workspace = true }
"sciqnt-config" = { workspace = true }
"sciqnt-platform" = { workspace = true }
"sciqnt-tui" = { workspace = true }
