[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-degiro"
version = "0.0.1"
description = "sciqnt Degiro source unit — CSV exports to canonical events, realized P&L, cash reconciliation"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "sciqnt-analytics",
    "sciqnt-compute",
    "sciqnt-config",
    "sciqnt-fx",
    "sciqnt-schema",
    "sciqnt-secrets",
    "sciqnt-fmt",
]

[project.optional-dependencies]
# Interactive viewer (the full-screen tabbed live view) — prompt-toolkit
# via sciqnt-tui. The headless data path (snapshot / --json) needs none.
tui = ["sciqnt-tui"]
# LIVE (api) flavour — unofficial, reverse-engineered, at-your-own-risk.
# wrapt<2 and protobuf are UNDECLARED deps of degiro-connector (it needs them but
# doesn't list them) — pin them here so `pip install sq-degiro[live]` works.
# keyring backs the shared credential substrate (core/sq_secrets), which the live
# flavour imports; kept here so the live extra is self-sufficient to install.
live = ["degiro-connector", "wrapt<2", "protobuf", "keyring"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-analytics" = { workspace = true }
"sciqnt-compute" = { workspace = true }
"sciqnt-config" = { workspace = true }
"sciqnt-fx" = { workspace = true }
"sciqnt-schema" = { workspace = true }
"sciqnt-secrets" = { workspace = true }
"sciqnt-fmt" = { workspace = true }
"sciqnt-tui" = { workspace = true }
