[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-demo"
version = "0.0.1"
description = "sciqnt deterministic demo portfolio — synthetic, seeded, offline"
readme = "FINDINGS.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sciqnt-compute",
    "sciqnt-schema",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-compute" = { workspace = true }
"sciqnt-schema" = { workspace = true }
