[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-finnhub"
version = "0.0.1"
description = "sciqnt news source unit — official Finnhub company news (free key)"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
    "sciqnt-secrets",
]
                   # sq-core (sq_schema/sq_secrets) — repo-relative until sq-core ships on PyPI

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-schema" = { workspace = true }
"sciqnt-secrets" = { workspace = true }
