[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-firds"
version = "0.0.1"
description = "sciqnt reference-data source unit — ISIN to EU regulatory instrument data via ESMA FIRDS (free, no key)"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
