[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-fx-ecb"
version = "0.0.1"
description = "sciqnt FX source unit — ECB EUR-cross daily reference rates (public, no auth)"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-schema" = { workspace = true }
