[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-news-rss"
version = "0.0.1"
description = "sciqnt news source unit — per-ticker headlines from Yahoo Finance RSS (no key)"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
]
                   # sq-core (sq_schema/sq_secrets) — repo-relative until sq-core ships on PyPI

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-schema" = { workspace = true }
