[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-openfigi"
version = "0.0.1"
description = "sciqnt identifier resolver — ISIN to ticker candidates via the free OpenFIGI API"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
