[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqnt-polymarket"
version = "0.0.1"
description = "sciqnt Polymarket source unit — event-contract positions via the public Data API"
readme = "FINDINGS.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "sciqnt-schema",
    "sciqnt-secrets",
    "sciqnt-fmt",
]

[project.optional-dependencies]
# Interactive viewer (the full-screen tabbed live view) — prompt-toolkit
# via sciqnt-tui. The headless data path (snapshot / --json) needs none.
tui = ["sciqnt-tui"]
# keyring backs the shared credential substrate (the wallet address is stored
# there for consistency + multi-wallet, though it isn't secret).
live = ["keyring"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
"sciqnt-schema" = { workspace = true }
"sciqnt-secrets" = { workspace = true }
"sciqnt-fmt" = { workspace = true }
"sciqnt-tui" = { workspace = true }
